# aicli_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py
src/aicli100/: ai.py  cli.py  main.py  post_install.py  setup.py
